apps/jupyter/hub/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hub
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /hub/metrics
    prometheus.io/port: "8081"
spec:
  type: ClusterIP
  selector:
    component: hub
    app: jupyterhub
    release: jupyterhub
  ports:
    - name: hub
      port: 8081
      targetPort: http
